RESOLVED FIXED46710
[Chromium] Linking error due to wrong guard in WebIDBTransaction.h
https://bugs.webkit.org/show_bug.cgi?id=46710
Summary [Chromium] Linking error due to wrong guard in WebIDBTransaction.h
Andrei Popescu
Reported 2010-09-28 03:26:38 PDT
[Chromium] Linking error due to wrong guard in WebIDBTransaction.h
Attachments
Patch (1.39 KB, patch)
2010-09-28 03:32 PDT, Andrei Popescu
jorlow: review+
jorlow: commit-queue-
Andrei Popescu
Comment 1 2010-09-28 03:32:09 PDT
Jeremy Orlow
Comment 2 2010-09-28 03:36:09 PDT
Comment on attachment 69034 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=69034&action=review r=me > WebKit/chromium/public/WebIDBTransaction.h:65 > + // FIXME: this is never called in the renderer. Find a cleaner solution. Comments that apply to the whole function really seem like they should go right above the function not in them. Is there other precedent for something like this? If not, can you please stop doing this? Also, try not to make the comments Chromium architecture specific. Maybe just say that this is only meant to be called from within WebCore?
Jeremy Orlow
Comment 3 2010-09-28 03:36:23 PDT
+fishd cause this is a webkit patch
Andrei Popescu
Comment 4 2010-09-28 03:40:34 PDT
(In reply to comment #2) > (From update of attachment 69034 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=69034&action=review > > r=me > > > WebKit/chromium/public/WebIDBTransaction.h:65 > > + // FIXME: this is never called in the renderer. Find a cleaner solution. > > Comments that apply to the whole function really seem like they should go right above the function not in them. Is there other precedent for something like this? If not, can you please stop doing this? > OK ok :) > Also, try not to make the comments Chromium architecture specific. Maybe just say that this is only meant to be called from within WebCore? Erm, this bug has the [Chromium] label and the patch touches only a file in /WebKit/chromium so how can making a chromium-specific comment possibly be wrong?
Jeremy Orlow
Comment 5 2010-09-28 03:49:08 PDT
(In reply to comment #4) > (In reply to comment #2) > > (From update of attachment 69034 [details] [details]) > > View in context: https://bugs.webkit.org/attachment.cgi?id=69034&action=review > > > > r=me > > > > > WebKit/chromium/public/WebIDBTransaction.h:65 > > > + // FIXME: this is never called in the renderer. Find a cleaner solution. > > > > Comments that apply to the whole function really seem like they should go right above the function not in them. Is there other precedent for something like this? If not, can you please stop doing this? > > > > OK ok :) > > > Also, try not to make the comments Chromium architecture specific. Maybe just say that this is only meant to be called from within WebCore? > > Erm, this bug has the [Chromium] label and the patch touches only a file in /WebKit/chromium so how can making a chromium-specific comment possibly be wrong? WebKit code should not depend on Chromium code. Even if this code is designed to be consumed by Chromium. Plus Darin said so. :-)
Andrei Popescu
Comment 6 2010-09-28 03:52:59 PDT
Andrei Popescu
Comment 7 2010-09-28 03:54:34 PDT
(In reply to comment #5) > (In reply to comment #4) > > (In reply to comment #2) > > > (From update of attachment 69034 [details] [details] [details]) > > > View in context: https://bugs.webkit.org/attachment.cgi?id=69034&action=review > > > > > > r=me > > > > > > > WebKit/chromium/public/WebIDBTransaction.h:65 > > > > + // FIXME: this is never called in the renderer. Find a cleaner solution. > > > > > > Comments that apply to the whole function really seem like they should go right above the function not in them. Is there other precedent for something like this? If not, can you please stop doing this? > > > > > > > OK ok :) > > > > > Also, try not to make the comments Chromium architecture specific. Maybe just say that this is only meant to be called from within WebCore? > > > > Erm, this bug has the [Chromium] label and the patch touches only a file in /WebKit/chromium so how can making a chromium-specific comment possibly be wrong? > > WebKit code should not depend on Chromium code. Even if this code is designed to be consumed by Chromium. > Yes, that comment did depend on Chromium code...fair enough, changed.
Jeremy Orlow
Comment 8 2010-09-28 08:24:08 PDT
(In reply to comment #4) > (In reply to comment #2) > > (From update of attachment 69034 [details] [details]) > > View in context: https://bugs.webkit.org/attachment.cgi?id=69034&action=review > > > > r=me > > > > > WebKit/chromium/public/WebIDBTransaction.h:65 > > > + // FIXME: this is never called in the renderer. Find a cleaner solution. > > > > Comments that apply to the whole function really seem like they should go right above the function not in them. Is there other precedent for something like this? If not, can you please stop doing this? > > > > OK ok :) > > > Also, try not to make the comments Chromium architecture specific. Maybe just say that this is only meant to be called from within WebCore? > > Erm, this bug has the [Chromium] label and the patch touches only a file in /WebKit/chromium so how can making a chromium-specific comment possibly be wrong? WebKit code should not depend on Chromium code. Even if this code is designed to be consumed by Chromium. Plus Darin said so. :-)
Jeremy Orlow
Comment 9 2010-09-28 08:24:28 PDT
(In reply to comment #8) > (In reply to comment #4) > > (In reply to comment #2) > > > (From update of attachment 69034 [details] [details] [details]) > > > View in context: https://bugs.webkit.org/attachment.cgi?id=69034&action=review > > > > > > r=me > > > > > > > WebKit/chromium/public/WebIDBTransaction.h:65 > > > > + // FIXME: this is never called in the renderer. Find a cleaner solution. > > > > > > Comments that apply to the whole function really seem like they should go right above the function not in them. Is there other precedent for something like this? If not, can you please stop doing this? > > > > > > > OK ok :) > > > > > Also, try not to make the comments Chromium architecture specific. Maybe just say that this is only meant to be called from within WebCore? > > > > Erm, this bug has the [Chromium] label and the patch touches only a file in /WebKit/chromium so how can making a chromium-specific comment possibly be wrong? > > WebKit code should not depend on Chromium code. Even if this code is designed to be consumed by Chromium. > > Plus Darin said so. :-) Ugh...stupid bugzilla...sorry.
Note You need to log in before you can comment on or make changes to this bug.