2010-09-28  Andrei Popescu  <andreip@google.com>

Reviewed by Jeremy Orlow.

        [Chromium] Linking error due to wrong guard in WebIDBTransaction.h
        https://bugs.webkit.org/show_bug.cgi?id=46710

        Remove the wrong guard.

        * public/WebIDBTransaction.h:
        (WebKit::WebIDBTransaction::getIDBTransactionBackendInterface):

Canonical link: https://commits.webkit.org/59191@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68504 268f45cc-cd09-0410-ab3c-d52691b4dbfc